--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,9 @@ mcp-publisher
 
 # CLAUDE.md is private — golden copy in Vault only
 CLAUDE.md
+
+# Cursor rules are private — golden copy in Vault, symlink in repo
+.cursor/rules
+
+# Plans and roadmaps stay in Vault; do not commit
+PLAN.md
